--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "sweetalert2": "^11.15.10"
   },
