--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "mongoose": "^8.9.3",
     "next": "15.1.3",
     "react": "^19.0.0",
